<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.rugbyscoringapp.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <LinearLayout
                android:layout_width="@dimen/layoutWeightDimension"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/teamTextView"
                    android:text="@string/textTeamA" />

                <TextView
                    android:id="@+id/score_team_a"
                    style="@style/scoreTextView"
                    android:text="@string/initial_value" />

                <Button
                    style="@style/scoreButtons"
                    android:onClick="tryForTeamA"
                    android:text="@string/textTry" />

                <Button
                    style="@style/scoreButtons"
                    android:onClick="conversionForTeamA"
                    android:text="@string/textConversion" />

                <Button
                    style="@style/scoreButtons"
                    android:onClick="penaltyForTeamA"
                    android:text="@string/textPenalty" />

                <Button
                    style="@style/scoreButtons"
                    android:onClick="dropGoalForTeamA"
                    android:text="@string/textDropGoal" />

            </LinearLayout>

            <View
                android:layout_width="@dimen/viewDimension"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/layout_margin_extra_small"
                android:layout_marginTop="@dimen/layout_margin_medium"
                android:background="@android:color/darker_gray">

            </View>

            <LinearLayout
                android:layout_width="@dimen/layoutWeightDimension"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/teamTextView"
                    android:text="@string/textTeamB" />

                <TextView
                    android:id="@+id/score_team_b"
                    style="@style/scoreTextView"
                    android:text="@string/initial_value" />

                <Button
                    style="@style/scoreButtons"
                    android:onClick="tryForTeamB"
                    android:text="@string/textTry" />

                <Button
                    style="@style/scoreButtons"
                    android:onClick="conversionForTeamB"
                    android:text="@string/textConversion" />

                <Button
                    style="@style/scoreButtons"
                    android:onClick="penaltyForTeamB"
                    android:text="@string/textPenalty" />

                <Button
                    style="@style/scoreButtons"
                    android:onClick="dropGoalForTeamB"
                    android:text="@string/textDropGoal" />

            </LinearLayout>

        </LinearLayout>

        <Button
            style="@style/statisticsScores"
            android:layout_marginBottom="@dimen/layout_margin_medium"
            android:layout_marginTop="@dimen/layout_margin_medium"
            android:onClick="reset"
            android:text="@string/textReset"
            android:textAllCaps="false" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/layout_margin_medium"
            android:gravity="center"
            android:text="@string/textStatistics"
            android:textSize="14sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="@dimen/layoutWeightDimension"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/statisticsCategories"
                    android:text="@string/textTryPlural" />

                <TextView
                    android:id="@+id/try_team_a"
                    style="@style/statisticsScores"
                    android:text="@string/initial_value" />

                <TextView
                    style="@style/statisticsCategories"
                    android:text="@string/textConversionPlural" />

                <TextView
                    android:id="@+id/conversion_team_a"
                    style="@style/statisticsScores"
                    android:text="@string/initial_value" />

                <TextView
                    style="@style/statisticsCategories"
                    android:text="@string/textPenaltyPlural" />

                <TextView
                    android:id="@+id/penalty_team_a"
                    style="@style/statisticsScores"
                    android:text="@string/initial_value" />

                <TextView
                    style="@style/statisticsCategories"
                    android:text="@string/textDropGoalPlural" />

                <TextView
                    android:id="@+id/drop_goal_team_a"
                    style="@style/statisticsScores"
                    android:text="@string/initial_value" />

            </LinearLayout>

            <View
                android:layout_width="@dimen/viewDimension"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray">

            </View>

            <LinearLayout
                android:layout_width="@dimen/layoutWeightDimension"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/statisticsCategories"
                    android:text="@string/textTryPlural" />

                <TextView
                    android:id="@+id/try_team_b"
                    style="@style/statisticsScores"
                    android:text="@string/initial_value" />

                <TextView
                    style="@style/statisticsCategories"
                    android:text="@string/textConversionPlural" />

                <TextView
                    android:id="@+id/conversion_team_b"
                    style="@style/statisticsScores"
                    android:text="@string/initial_value" />

                <TextView
                    style="@style/statisticsCategories"
                    android:text="@string/textPenaltyPlural" />

                <TextView
                    android:id="@+id/penalty_team_b"
                    style="@style/statisticsScores"
                    android:text="@string/initial_value" />

                <TextView
                    style="@style/statisticsCategories"
                    android:text="@string/textDropGoalPlural" />

                <TextView
                    android:id="@+id/drop_goal_team_b"
                    style="@style/statisticsScores"
                    android:text="@string/initial_value" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/layout_margin_medium"
            android:layout_marginEnd="@dimen/layout_margin_large"
            android:layout_marginStart="@dimen/layout_margin_large"
            android:layout_marginTop="@dimen/layout_margin_extra_large"
            android:text="@string/textImportantNote"
            android:textSize="@dimen/font_size_small" />

    </LinearLayout>

</ScrollView>
